E1 HTML Title changed

--- a/JP_7646136_E1_TestGit/E1.html
+++ b/JP_7646136_E1_TestGit/E1.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <title>Programming Exercise - 1</title>
+  <title>Programming Exercise - 1 - First Week</title>
   <style>
     #competitionPara {
       font-size: 50px;
